@@ -3,6 +3,8 @@ It should contain a brief description of new features;
 in some way an extension to the changelog.
 ------------------------------------------------------
 
+Shift-DEL will delete a file and not move it to the trash as DEL does. (total commander like)
+
 Import/Export keyboard shortcuts from/to a file. want krusader to become total commander in a 
 single click? no problem!
 
