@@ -1,4 +1,5 @@
-    ADDED: splitter: pre-defined 650MB and 700MB CD-R
+    ADDED: shift-del deletes and doesn't move to trash
+	 ADDED: splitter: pre-defined 650MB and 700MB CD-R
     ADDED: more Konfigurator Tooltips    
     ADDED: usermenu: entry to open konfigurator with the useraction-page directly
     ADDED: import/export of keyboard shortcuts
